Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -11,18 +11,13 @@
 
 \tableofcontents
 
-\section{Introduction}
-\section{Context}
-\section{Detailed project description}
-\section{Risk analysis}
-\section{Milestones}
-\subsection{Scoping}
-\subsection{First prototype}
-\subsection{Working core}
-\subsection{Stable version}
-\subsection{End of build}
-\subsection{Report}
-\subsection{Submission}
-\section*{References}
+\input{sections/introduction.tex}
+\input{sections/context.tex}
+\input{sections/detailed_project_description.tex}
+\input{sections/risk_analysis.tex}
+\input{sections/milestones.tex}
+
+\bibliographystyle{abbrv}
+\bibliography{references} 
 
 \end{document}
